--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
 	"printWidth": 100,
 	"singleQuote": true,
 	"trailingComma": "all",
+	"singleAttributePerLine": true,
 	"vueIndentScriptAndStyle": true
 }
