--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"test:unit": "vitest",
 		"build-only": "vite build",
 		"type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+		"lint": "eslint . --ext .vue,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
 		"format": "prettier --write src/",
-		"test": "vitest --run --update"
+		"test": "vitest",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
 	},
 	"repository": {
 		"type": "git",
@@ -36,6 +38,23 @@
 		"vue": "^3.3.4"
 	},
 	"devDependencies": {
+		"@storybook/addon-a11y": "^7.2.2",
+		"@storybook/addon-actions": "^7.2.3",
+		"@storybook/addon-controls": "^7.2.3",
+		"@storybook/addon-essentials": "^7.2.2",
+		"@storybook/addon-interactions": "^7.2.2",
+		"@storybook/addon-links": "^7.2.3",
+		"@storybook/addon-styling": "^1.3.6",
+		"@storybook/addon-viewport": "^7.2.2",
+		"@storybook/addons": "^7.2.2",
+		"@storybook/blocks": "^7.2.2",
+		"@storybook/manager-api": "^7.2.2",
+		"@storybook/testing-library": "^0.2.0",
+		"@storybook/testing-vue3": "^1.0.0",
+		"@storybook/theming": "^7.2.2",
+		"@storybook/vue3": "^7.2.2",
+		"@storybook/vue3-vite": "^7.2.2",
+		"@testing-library/vue": "^7.0.0",
 		"@tsconfig/node18": "^18.2.0",
 		"@types/jsdom": "^21.1.1",
 		"@types/node": "^18.17.0",
@@ -46,6 +65,7 @@
 		"@vue/eslint-config-typescript": "^11.0.3",
 		"@vue/test-utils": "^2.4.1",
 		"@vue/tsconfig": "^0.4.0",
+		"autoprefixer": "^10.4.14",
 		"eslint": "^8.46.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.0",
@@ -53,7 +73,12 @@
 		"eslint-plugin-vue": "^9.16.1",
 		"jsdom": "^22.1.0",
 		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.27",
 		"prettier": "^3.0.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"storybook": "^7.2.3",
+		"tailwindcss": "^3.3.3",
 		"typescript": "~5.1.6",
 		"vite": "^4.4.9",
 		"vite-plugin-dts": "^3.5.2",
