--- a/.github/workflows/deploy_storybook.yaml
+++ b/.github/workflows/deploy_storybook.yaml
@@ -15,4 +15,4 @@ jobs:
         uses: bitovi/github-actions-storybook-to-github-pages@v1.0.0
         with:
           path: dist/storybook
-          build_command: pnpm run build-storybook
+          build_command: npm run build-storybook
