--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
 		"format": "prettier --write src/",
 		"test": "vitest",
 		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
+		"build-storybook": "storybook build",
+		"predeploy": "npm run build-storybook",
+		"deploy-storybook": "gh-pages -d storybook-static"
 	},
+	"homepage": "http://mrksbnc.github.io/complib",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/mrksbnc/complib.git"
@@ -66,11 +69,13 @@
 		"@vue/test-utils": "^2.4.1",
 		"@vue/tsconfig": "^0.4.0",
 		"autoprefixer": "^10.4.14",
+		"chromatic": "^6.21.0",
 		"eslint": "^8.46.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-storybook": "^0.6.13",
 		"eslint-plugin-vue": "^9.16.1",
+		"gh-pages": "^6.0.0",
 		"jsdom": "^22.1.0",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.27",
