--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -2,7 +2,8 @@ name: Build and Deploy Storybook
 
 on:
   push:
-    paths: ['docs', 'src/components/**'] # Trigger the action only when files change in the folders defined here
+    branches: [main]
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
