--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"format": "prettier --write src/",
 		"test": "vitest",
 		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build -o dist-storybook",
+		"build-storybook": "storybook build -o docs",
+		"deploy-storybook": "gh-pages -d docs",
 		"patch": "pnpm version patch",
 		"minor": "pnpm version minor",
 		"major": "pnpm version major",
