--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -16,11 +16,6 @@ jobs:
         run: | # Install npm packages and build the Storybook files
           npm install
           npm run build-storybook
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@3.6.2
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: main # The branch the action should deploy to.
-          FOLDER: dist-storybook # The folder that the build-storybook script generates files.
-          CLEAN: true # Automatically remove deleted files from the deploy branch
-          TARGET_FOLDER: docs # The folder that we serve our Storybook files from
+      - name: Deploy Storybook 🚀
+        run: | # Deploy the Storybook files to GitHub Pages
+          npm run deploy-storybook
