--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -14,8 +14,8 @@ jobs:
           persist-credentials: false
       - name: Install and Build 🔧
         run: | # Install npm packages and build the Storybook files
-          npm install
-          npm run build-storybook
+          pnpm install
+          pnpm run build-storybook
       - name: Deploy Storybook 🚀
         run: | # Deploy the Storybook files to GitHub Pages
-          npm run deploy-storybook
+          pnpm run deploy-storybook
