--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -10,12 +10,10 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
-        with:
-          persist-credentials: false
       - name: Install and Build 🔧
         run: | # Install npm packages and build the Storybook files
-          pnpm install
-          pnpm run build-storybook
+          npm install
+          npm run build-storybook
       - name: Deploy Storybook 🚀
         run: | # Deploy the Storybook files to GitHub Pages
-          pnpm run deploy-storybook
+          npm run deploy-storybook
