--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -5,6 +5,8 @@ on:
 
 jobs:
   build-and-deploy:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
