--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -21,4 +21,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
           branch: gh-pages
-          folder: storybook-static # output folder from `npm run build-storybook`
+          folder: storybook-static
