--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"test": "vitest",
 		"storybook": "storybook dev -p 6006",
 		"release": "npm run build && npm publish && npm run deploy-storybook",
-		"pre-deploy": "storybook build",
+		"build-storybook": "storybook build",
 		"deploy-storybook": "gh-pages -d storybook-static"
 	},
 	"homepage": "http://mrksbnc.github.io/complib",
