--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -14,6 +14,11 @@ jobs:
         run: | # Install npm packages and build the Storybook files
           npm install
           npm run build-storybook
+      - name: Setting git config
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Deploy Storybook 🚀
         run: | # Deploy the Storybook files to GitHub Pages
           npm run deploy-storybook
