--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,24 +1,31 @@
-name: Build and Deploy Storybook
-
+name: Storybook Deploy
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x]
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
-      - name: Install and Build 🔧
-        run: | # Install npm packages and build the Storybook files
-          npm install
-          npm run build-storybook
-      - name: Setting git config
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-      - name: Deploy Storybook 🚀
-        run: | # Deploy the Storybook files to GitHub Pages
-          npm run deploy-storybook
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
+      - name: Installing dependencies 📦...
+        run: pnpm install
+      - name: Building Storybook 🔧...
+        run: pnpm run build-storybook
+      - name: Deploying Storybook 🚀...
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./storybook-static
