--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"test": "vitest",
 		"storybook": "storybook dev -p 6006",
 		"release": "npm run build && npm publish && npm run deploy-storybook",
-		"build-storybook": "storybook build",
-		"deploy-storybook": "gh-pages -d storybook-static"
+		"build-storybook": "storybook build -o docs",
+		"deploy-storybook": "gh-pages -d docs"
 	},
 	"homepage": "http://mrksbnc.github.io/complib",
 	"repository": {
