--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,6 +6,9 @@ on:
       - 'main'
 jobs:
   deploy:
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     environment:
       name: github-pages
       url: ${{ steps.build-publish.outputs.page_url }}
