--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,6 @@ charset = utf-8
 trim_trailing_whitespace = false
 insert_final_newline = false
 
-[*.yml]
+[*.yaml]
 indent_size = 2
 indent_style = space
