--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"react-dom": "^18.2.0",
 		"sass": "^1.65.1",
 		"storybook": "^7.3.2",
+		"storybook-tailwind-dark-mode": "^1.0.22",
 		"tailwindcss": "^3.3.3",
 		"typescript": "~5.1.6",
 		"vite": "^4.4.9",
