--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,10 @@ charset = utf-8
 trim_trailing_whitespace = false
 insert_final_newline = false
 
+[*.md]
+trim_trailing_whitespace = true
+
 [*.yaml]
 indent_size = 2
 indent_style = space
+
