--- a/package.json
+++ b/package.json
@@ -1,61 +1,64 @@
 {
-	"name": "@mrksbnc/complib",
+	"name": "@mrksbnc/ds",
 	"version": "0.0.0",
-	"description": "Reusable component collection built with Vite and Vue 3.",
+	"description": "Vue 3 UI library built with Vite, TailwindCSS, and Storybook",
 	"scripts": {
 		"dev": "vite",
 		"build": "npm run type-check && npm run build-only",
 		"preview": "vite preview",
-		"test:unit": "vitest",
 		"build-only": "vite build",
 		"type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
 		"lint": "eslint . --ext .vue,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
 		"format": "prettier --write src/",
-		"test": "vitest",
+		"test": "vitest --run --update",
 		"storybook": "storybook dev -p 6006",
-		"release": "npm run build && npm publish && npm run deploy-storybook",
+		"release": "npm run build && npm publish",
 		"build-storybook": "storybook build -o docs",
-		"deploy-storybook": "gh-pages -d docs"
+		"patch": "npm version --no-git-tag-version patch",
+		"minor": "npm version --no-git-tag-version minor",
+		"major": "npm version --no-git-tag-version major"
 	},
-	"homepage": "http://mrksbnc.github.io/complib",
+	"homepage": "http://mrksbnc.github.io/ds",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/mrksbnc/complib.git"
+		"url": "https://github.com/mrksbnc/ds.git"
 	},
 	"files": [
 		"dist/**/*"
 	],
-	"main": "./dist/complib.umd.js",
-	"module": "./dist/complib.es.js",
+	"main": "./dist/index.umd.js",
+	"module": "./dist/index.es.js",
+	"types": "./dist/index.d.ts",
 	"exports": {
 		".": {
-			"import": "./dist/complib.es.js",
-			"require": "./dist/complib.umd.js"
+			"import": "./dist/index.es.js",
+			"require": "./dist/index.umd.js"
 		},
 		"./index.css": {
 			"import": "./dist/index.css",
 			"require": "./dist/index.css"
 		}
 	},
-	"types": "./dist/index.d.ts",
 	"dependencies": {
 		"vue": "^3.3.4"
 	},
 	"devDependencies": {
-		"@storybook/addon-a11y": "^7.2.2",
-		"@storybook/addon-essentials": "^7.2.2",
-		"@storybook/addon-interactions": "^7.2.2",
-		"@storybook/addon-links": "^7.2.3",
-		"@storybook/addon-styling": "^1.3.6",
-		"@storybook/addon-viewport": "^7.2.2",
-		"@storybook/addons": "^7.2.2",
-		"@storybook/blocks": "^7.2.2",
-		"@storybook/manager-api": "^7.2.2",
+		"@storybook/addon-a11y": "^7.3.2",
+		"@storybook/addon-actions": "^7.3.2",
+		"@storybook/addon-controls": "^7.3.2",
+		"@storybook/addon-essentials": "^7.3.2",
+		"@storybook/addon-interactions": "^7.3.2",
+		"@storybook/addon-links": "^7.3.2",
+		"@storybook/addon-styling": "^2.0.2-next.4",
+		"@storybook/addon-viewport": "^7.3.2",
+		"@storybook/addons": "^7.3.2",
+		"@storybook/blocks": "^7.3.2",
+		"@storybook/manager-api": "^7.3.2",
 		"@storybook/testing-library": "^0.2.0",
 		"@storybook/testing-vue3": "^1.0.0",
-		"@storybook/theming": "^7.2.2",
-		"@storybook/vue3": "^7.2.2",
-		"@storybook/vue3-vite": "^7.2.2",
+		"@storybook/theming": "^7.3.2",
+		"@storybook/vue3": "^7.3.2",
+		"@storybook/vue3-vite": "^7.3.2",
 		"@testing-library/vue": "^7.0.0",
 		"@tsconfig/node18": "^18.2.0",
 		"@types/jsdom": "^21.1.1",
@@ -80,7 +83,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"sass": "^1.65.1",
-		"storybook": "^7.2.3",
+		"storybook": "^7.3.2",
+		"storybook-tailwind-dark-mode": "^1.0.22",
 		"tailwindcss": "^3.3.3",
 		"typescript": "~5.1.6",
 		"vite": "^4.4.9",
