--- a/package.json
+++ b/package.json
@@ -43,53 +43,53 @@
 		"vue": "^3.3.4"
 	},
 	"devDependencies": {
-		"@storybook/addon-a11y": "^7.3.2",
-		"@storybook/addon-actions": "^7.3.2",
-		"@storybook/addon-controls": "^7.3.2",
-		"@storybook/addon-essentials": "^7.3.2",
-		"@storybook/addon-interactions": "^7.3.2",
-		"@storybook/addon-links": "^7.3.2",
-		"@storybook/addon-styling": "^2.0.2--canary.82.ac39d17.0",
-		"@storybook/addon-viewport": "^7.3.2",
+		"@storybook/addon-a11y": "^7.4.6",
+		"@storybook/addon-actions": "^7.4.6",
+		"@storybook/addon-controls": "^7.4.6",
+		"@storybook/addon-essentials": "^7.4.6",
+		"@storybook/addon-interactions": "^7.4.6",
+		"@storybook/addon-links": "^7.4.6",
+		"@storybook/addon-styling": "2.0.2-next.4",
+		"@storybook/addon-viewport": "^7.4.6",
 		"@storybook/addons": "^7.4.6",
-		"@storybook/blocks": "^7.3.2",
-		"@storybook/manager-api": "^7.3.2",
+		"@storybook/blocks": "^7.4.6",
+		"@storybook/manager-api": "^7.4.6",
 		"@storybook/testing-library": "^0.2.2",
 		"@storybook/testing-vue3": "^1.0.0",
-		"@storybook/theming": "^7.3.2",
-		"@storybook/vue3": "^7.3.2",
-		"@storybook/vue3-vite": "^7.3.2",
+		"@storybook/theming": "^7.4.6",
+		"@storybook/vue3": "^7.4.6",
+		"@storybook/vue3-vite": "^7.4.6",
 		"@testing-library/vue": "^7.0.0",
-		"@tsconfig/node18": "^18.2.0",
-		"@types/jsdom": "^21.1.1",
+		"@tsconfig/node18": "^18.2.2",
+		"@types/jsdom": "^21.1.3",
 		"@types/node": "^20.8.4",
-		"@typescript-eslint/eslint-plugin": "^6.3.0",
+		"@typescript-eslint/eslint-plugin": "^6.7.5",
 		"@typescript-eslint/parser": "^6.7.5",
-		"@vitejs/plugin-vue": "^4.3.2",
-		"@vitest/coverage-v8": "^0.34.4",
+		"@vitejs/plugin-vue": "^4.4.0",
+		"@vitest/coverage-v8": "^0.34.6",
 		"@vue/eslint-config-typescript": "^11.0.3",
 		"@vue/test-utils": "^2.4.1",
 		"@vue/tsconfig": "^0.4.0",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.49.0",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.51.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.0",
-		"eslint-plugin-storybook": "^0.6.13",
-		"eslint-plugin-vue": "^9.16.1",
+		"eslint-plugin-storybook": "^0.6.15",
+		"eslint-plugin-vue": "^9.17.0",
 		"gh-pages": "^6.0.0",
 		"jsdom": "^22.1.0",
 		"postcss": "^8.4.31",
-		"prettier": "^3.0.0",
+		"prettier": "^3.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"sass": "^1.65.1",
+		"sass": "^1.69.1",
 		"storybook": "^7.4.6",
 		"storybook-tailwind-dark-mode": "^1.0.22",
 		"tailwindcss": "^3.3.3",
 		"typescript": "~5.2.2",
-		"vite": "^4.4.9",
-		"vite-plugin-dts": "^3.5.2",
-		"vitest": "^0.34.4",
+		"vite": "^4.4.11",
+		"vite-plugin-dts": "^3.6.0",
+		"vitest": "^0.34.6",
 		"vue-tsc": "^1.8.18"
 	}
 }
