--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,10 @@ pnpm-debug.log*
 node_modules
 .DS_Store
 dist
+static
 coverage
 *.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
