--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@mrksbnc/rui",
+	"name": "@mrksbnc/bamboo",
 	"version": "0.0.0",
 	"description": "Vue 3 UI library built with Vite, TailwindCSS, and Storybook",
 	"scripts": {
@@ -11,17 +11,17 @@
 		"lint": "eslint . --ext .vue,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
 		"format": "prettier --write src/",
 		"test": "vitest --run --update",
-		"storybook": "storybook dev -p 6006",
+		"storybook": "storybook dev -p 6006 --no-open",
 		"release": "npm run build && npm publish",
-		"build-storybook": "storybook build -o docs",
+		"build-storybook": "storybook build -o static",
 		"patch": "npm version --no-git-tag-version patch",
 		"minor": "npm version --no-git-tag-version minor",
 		"major": "npm version --no-git-tag-version major"
 	},
-	"homepage": "http://mrksbnc.github.io/rui",
+	"homepage": "http://mrksbnc.github.io/bamboo",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/mrksbnc/rui.git"
+		"url": "https://github.com/mrksbnc/bamboo.git"
 	},
 	"files": [
 		"dist/**/*"
@@ -43,26 +43,28 @@
 		"vue": "^3.3.4"
 	},
 	"devDependencies": {
-		"@storybook/addon-a11y": "^7.4.6",
-		"@storybook/addon-actions": "^7.4.6",
-		"@storybook/addon-controls": "^7.4.6",
-		"@storybook/addon-essentials": "^7.4.6",
-		"@storybook/addon-interactions": "^7.4.6",
-		"@storybook/addon-links": "^7.4.6",
-		"@storybook/addon-styling": "2.0.2-next.4",
-		"@storybook/addon-viewport": "^7.4.6",
-		"@storybook/addons": "^7.4.6",
-		"@storybook/blocks": "^7.4.6",
-		"@storybook/manager-api": "^7.4.6",
+		"@storybook/addon-a11y": "^7.5.3",
+		"@storybook/addon-actions": "^7.5.3",
+		"@storybook/addon-controls": "^7.5.3",
+		"@storybook/addon-designs": "^7.0.5",
+		"@storybook/addon-essentials": "^7.5.3",
+		"@storybook/addon-interactions": "^7.5.3",
+		"@storybook/addon-links": "^7.5.3",
+		"@storybook/addon-styling": "^1.3.7",
+		"@storybook/addon-themes": "^7.5.3",
+		"@storybook/addon-viewport": "^7.5.3",
+		"@storybook/addons": "^7.5.3",
+		"@storybook/blocks": "^7.5.3",
+		"@storybook/manager-api": "^7.5.3",
 		"@storybook/testing-library": "^0.2.2",
 		"@storybook/testing-vue3": "^1.0.0",
-		"@storybook/theming": "^7.4.6",
-		"@storybook/vue3": "^7.4.6",
-		"@storybook/vue3-vite": "^7.4.6",
+		"@storybook/theming": "^7.5.3",
+		"@storybook/vue3": "^7.5.3",
+		"@storybook/vue3-vite": "^7.5.3",
 		"@testing-library/vue": "^7.0.0",
 		"@tsconfig/node18": "^18.2.2",
 		"@types/jsdom": "^21.1.3",
-		"@types/node": "^20.8.4",
+		"@types/node": "20.8.10",
 		"@typescript-eslint/eslint-plugin": "^6.7.5",
 		"@typescript-eslint/parser": "^6.7.5",
 		"@vitejs/plugin-vue": "^4.3.2",
@@ -80,10 +82,11 @@
 		"jsdom": "^22.1.0",
 		"postcss": "^8.4.31",
 		"prettier": "^3.0.3",
+		"prettier-plugin-organize-imports": "^3.2.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"sass": "^1.69.1",
-		"storybook": "^7.4.6",
+		"storybook": "^7.5.3",
 		"storybook-tailwind-dark-mode": "^1.0.22",
 		"tailwindcss": "^3.3.3",
 		"typescript": "~5.2.2",
