--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "@mrksbnc/bamboo",
-  "version": "0.0.0",
-  "description": "Vue 3 UI library built with Vite and Storybook",
-  "scripts": {
-    "dev": "vite",
-    "build": "npm run type-check && npm run lint && vite optimize --force && vite build --mode production",
-    "preview": "vite preview",
+	"name": "@mrksbnc/bamboo",
+	"version": "0.0.0",
+	"description": "Vue 3 UI library built with Vite and Storybook",
+	"scripts": {
+		"dev": "vite",
+		"build": "npm run type-check && npm run lint && vite optimize --force && vite build --mode production",
+		"preview": "vite preview",
 		"test": "vitest --run --update",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/",
-    "patch": "npm version --no-git-tag-version patch",
-    "minor": "npm version --no-git-tag-version minor",
-    "major": "npm version --no-git-tag-version major",
-    "release": "npm run build && npm publish",
-    "storybook": "storybook dev -p 6006 --no-open",
-    "build-storybook": "storybook build -o docs"
-  },
-  "homepage": "http://mrksbnc.github.io/bamboo",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mrksbnc/bamboo.git"
-  },
-  "files": [
-    "dist/**/*"
-  ],
-  "main": "./dist/index.umd.js",
-  "module": "./dist/index.es.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
-    },
-    "./index.css": {
-      "import": "./dist/index.css",
-      "require": "./dist/index.css"
-    },
+		"build-only": "vite build",
+		"type-check": "vue-tsc --noEmit",
+		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+		"format": "prettier --write src/",
+		"patch": "npm version --no-git-tag-version patch",
+		"minor": "npm version --no-git-tag-version minor",
+		"major": "npm version --no-git-tag-version major",
+		"release": "npm run build && npm publish",
+		"storybook": "storybook dev -p 6006 --no-open",
+		"build-storybook": "storybook build -o docs"
+	},
+	"homepage": "http://mrksbnc.github.io/bamboo",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/mrksbnc/bamboo.git"
+	},
+	"files": [
+		"dist/**/*"
+	],
+	"main": "./dist/index.umd.js",
+	"module": "./dist/index.es.js",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		".": {
+			"import": "./dist/index.es.js",
+			"require": "./dist/index.umd.js"
+		},
+		"./index.css": {
+			"import": "./dist/index.css",
+			"require": "./dist/index.css"
+		},
 		"./colors.css": {
 			"import": "./dist/colors.css",
 			"require": "./dist/colors.css"
@@ -45,57 +45,65 @@
 		"./animation.css": {
 			"import": "./dist/animation.css",
 			"require": "./dist/animation.css"
+		},
+		"./inter.css": {
+			"import": "./dist/inter.css",
+			"require": "./dist/inter.css"
+		},
+		"./assistant.css": {
+			"import": "./dist/assistant.css",
+			"require": "./dist/assistant.css"
 		}
-  },
-  "dependencies": {
-    "vue": "^3.3.4"
-  },
-  "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@storybook/addon-a11y": "^7.5.3",
-    "@storybook/addon-actions": "^7.5.3",
-    "@storybook/addon-controls": "^7.5.3",
-    "@storybook/addon-designs": "^7.0.5",
-    "@storybook/addon-essentials": "^7.5.3",
-    "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/addon-links": "^7.5.3",
-    "@storybook/addon-styling": "^1.3.7",
-    "@storybook/addon-themes": "^7.5.3",
-    "@storybook/addon-viewport": "^7.5.3",
-    "@storybook/addons": "^7.5.3",
-    "@storybook/blocks": "^7.5.3",
-    "@storybook/manager-api": "^7.5.3",
-    "@storybook/theming": "^7.5.3",
-    "@storybook/vue3": "^7.5.3",
-    "@storybook/vue3-vite": "^7.5.3",
-    "@tsconfig/node18": "^18.2.2",
-    "@types/jsdom": "^21.1.3",
-    "@types/node": "^20.9.1",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.1",
-    "@vue/tsconfig": "^0.4.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "8.52.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-vue": "^9.17.0",
-    "gh-pages": "^6.0.0",
-    "jsdom": "^22.1.0",
-    "npm-run-all2": "^6.1.1",
-    "prettier": "^3.0.3",
-    "prettier-plugin-organize-imports": "^3.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.69.5",
-    "storybook": "^7.5.3",
-    "storybook-dark-mode": "^3.0.1",
-    "typescript": "~5.2.0",
-    "vite": "^4.4.11",
-    "vite-plugin-dts": "^3.6.3",
-    "vitest": "^0.34.6",
-    "vue-tsc": "^1.8.19"
-  }
+	},
+	"dependencies": {
+		"vue": "^3.3.4"
+	},
+	"devDependencies": {
+		"@rushstack/eslint-patch": "^1.3.3",
+		"@storybook/addon-a11y": "^7.5.3",
+		"@storybook/addon-actions": "^7.5.3",
+		"@storybook/addon-controls": "^7.5.3",
+		"@storybook/addon-designs": "^7.0.5",
+		"@storybook/addon-essentials": "^7.5.3",
+		"@storybook/addon-interactions": "^7.5.3",
+		"@storybook/addon-links": "^7.5.3",
+		"@storybook/addon-styling": "^1.3.7",
+		"@storybook/addon-themes": "^7.5.3",
+		"@storybook/addon-viewport": "^7.5.3",
+		"@storybook/addons": "^7.5.3",
+		"@storybook/blocks": "^7.5.3",
+		"@storybook/manager-api": "^7.5.3",
+		"@storybook/theming": "^7.5.3",
+		"@storybook/vue3": "^7.5.3",
+		"@storybook/vue3-vite": "^7.5.3",
+		"@tsconfig/node18": "^18.2.2",
+		"@types/jsdom": "^21.1.3",
+		"@types/node": "^20.9.1",
+		"@vitejs/plugin-vue": "^4.4.0",
+		"@vue/eslint-config-prettier": "^8.0.0",
+		"@vue/eslint-config-typescript": "^12.0.0",
+		"@vue/test-utils": "^2.4.1",
+		"@vue/tsconfig": "^0.4.0",
+		"autoprefixer": "^10.4.16",
+		"eslint": "8.52.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.1",
+		"eslint-plugin-storybook": "^0.6.15",
+		"eslint-plugin-vue": "^9.17.0",
+		"gh-pages": "^6.0.0",
+		"jsdom": "^22.1.0",
+		"npm-run-all2": "^6.1.1",
+		"prettier": "^3.0.3",
+		"prettier-plugin-organize-imports": "^3.2.4",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"sass": "^1.69.5",
+		"storybook": "^7.5.3",
+		"storybook-dark-mode": "^3.0.1",
+		"typescript": "~5.2.0",
+		"vite": "^4.4.11",
+		"vite-plugin-dts": "^3.6.3",
+		"vitest": "^0.34.6",
+		"vue-tsc": "^1.8.19"
+	}
 }
