--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "@mrksbnc/bamboo",
 	"version": "0.0.0",
 	"description": "Vue 3 UI library built with Vite and Storybook",
+	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "npm run type-check && npm run lint && vite optimize --force && vite build --mode production && node scripts/postbuild.cjs",
@@ -26,17 +27,17 @@
 	"files": [
 		"dist/**/*"
 	],
-	"main": "./dist/index.umd.js",
+	"main": "./dist/index.cjs.js",
 	"module": "./dist/index.es.js",
 	"types": "./dist/index.d.ts",
 	"exports": {
 		".": {
 			"import": "./dist/index.es.js",
-			"require": "./dist/index.umd.js"
+			"require": "./dist/index.cjs.js"
 		},
-		"./index.css": {
-			"import": "./dist/index.css",
-			"require": "./dist/index.css"
+		"./main.css": {
+			"import": "./dist/main.css",
+			"require": "./dist/main.css"
 		},
 		"./colors.css": {
 			"import": "./dist/colors.css",
@@ -78,19 +79,19 @@
 		"@storybook/vue3-vite": "^7.5.3",
 		"@tsconfig/node18": "^18.2.2",
 		"@types/jsdom": "^21.1.3",
-		"@types/node": "^20.9.1",
+		"@types/node": "^20.9.2",
 		"@vitejs/plugin-vue": "^4.4.0",
 		"@vue/eslint-config-prettier": "^8.0.0",
 		"@vue/eslint-config-typescript": "^12.0.0",
 		"@vue/test-utils": "^2.4.1",
 		"@vue/tsconfig": "^0.4.0",
 		"autoprefixer": "^10.4.16",
-		"eslint": "8.52.0",
+		"eslint": "^8.54.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.1",
 		"eslint-plugin-storybook": "^0.6.15",
 		"eslint-plugin-vue": "^9.17.0",
-		"gh-pages": "^6.0.0",
+		"gh-pages": "^6.1.0",
 		"jsdom": "^22.1.0",
 		"npm-run-all2": "^6.1.1",
 		"prettier": "^3.0.3",
@@ -101,7 +102,7 @@
 		"storybook": "^7.5.3",
 		"storybook-dark-mode": "^3.0.1",
 		"typescript": "~5.2.0",
-		"vite": "^4.4.11",
+		"vite": "^5.0.0",
 		"vite-plugin-dts": "^3.6.3",
 		"vitest": "^0.34.6",
 		"vue-tsc": "^1.8.19"
