--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"@storybook/addon-essentials": "^7.5.3",
 		"@storybook/addon-interactions": "^7.5.3",
 		"@storybook/addon-links": "^7.5.3",
+		"@storybook/addon-mdx-gfm": "^7.5.3",
 		"@storybook/addon-styling": "^1.3.7",
 		"@storybook/addon-themes": "^7.5.3",
 		"@storybook/addon-viewport": "^7.5.3",
