--- a/package.json
+++ b/package.json
@@ -56,10 +56,10 @@
 		}
 	},
 	"dependencies": {
-		"vue": "^3.3.4"
+		"vue": "^3.3.9"
 	},
 	"devDependencies": {
-		"@rushstack/eslint-patch": "^1.3.3",
+		"@rushstack/eslint-patch": "^1.6.0",
 		"@storybook/addon-a11y": "^7.5.3",
 		"@storybook/addon-actions": "^7.5.3",
 		"@storybook/addon-controls": "^7.5.3",
@@ -78,15 +78,15 @@
 		"@storybook/vue3": "^7.5.3",
 		"@storybook/vue3-vite": "^7.5.3",
 		"@tsconfig/node18": "^18.2.2",
-		"@types/jsdom": "^21.1.3",
-		"@types/node": "^20.9.1",
+		"@types/jsdom": "^21.1.6",
+		"@types/node": "^20.10.0",
 		"@vitejs/plugin-vue": "^4.4.0",
 		"@vue/eslint-config-prettier": "^8.0.0",
 		"@vue/eslint-config-typescript": "^12.0.0",
 		"@vue/test-utils": "^2.4.1",
 		"@vue/tsconfig": "^0.4.0",
 		"autoprefixer": "^10.4.16",
-		"eslint": "8.52.0",
+		"eslint": "^8.52.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.1",
 		"eslint-plugin-storybook": "^0.6.15",
@@ -101,8 +101,8 @@
 		"sass": "^1.69.5",
 		"storybook": "^7.5.3",
 		"storybook-dark-mode": "^3.0.1",
-		"typescript": "~5.2.0",
-		"vite": "^4.4.11",
+		"typescript": "^5.3.2",
+		"vite": "^4.5.0",
 		"vite-plugin-dts": "^3.6.3",
 		"vitest": "^0.34.6",
 		"vue-tsc": "^1.8.19"
