--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@mrksbnc/bamboo",
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"description": "Vue 3 UI library built with Vite and Storybook",
 	"scripts": {
 		"dev": "vite",
@@ -14,7 +14,7 @@
 		"patch": "npm version --no-git-tag-version patch",
 		"minor": "npm version --no-git-tag-version minor",
 		"major": "npm version --no-git-tag-version major",
-		"release": "npm run build && npm publish",
+		"release": "npm run build && npm publish --access public",
 		"storybook": "storybook dev -p 6006 --no-open",
 		"build-storybook": "storybook build -o docs"
 	},
