--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
 		"@storybook/addon-essentials": "^7.5.3",
 		"@storybook/addon-interactions": "^7.5.3",
 		"@storybook/addon-links": "^7.5.3",
-		"@storybook/addon-mdx-gfm": "^7.5.3",
 		"@storybook/addon-styling": "^1.3.7",
 		"@storybook/addon-themes": "^7.5.3",
 		"@storybook/addon-viewport": "^7.5.3",
@@ -98,6 +97,7 @@
 		"prettier-plugin-organize-imports": "^3.2.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"remark-gfm": "^4.0.0",
 		"sass": "^1.69.5",
 		"storybook": "^7.5.3",
 		"storybook-dark-mode": "^3.0.1",
