--- a/package.json
+++ b/package.json
@@ -64,36 +64,36 @@
 		}
 	},
 	"dependencies": {
-		"vue": "^3.3.9"
+		"vue": "^3.3.10"
 	},
 	"devDependencies": {
 		"@rushstack/eslint-patch": "^1.6.0",
-		"@storybook/addon-a11y": "^7.5.3",
-		"@storybook/addon-actions": "^7.5.3",
-		"@storybook/addon-controls": "^7.5.3",
-		"@storybook/addon-designs": "^7.0.5",
-		"@storybook/addon-essentials": "^7.5.3",
-		"@storybook/addon-interactions": "^7.5.3",
-		"@storybook/addon-links": "^7.5.3",
+		"@storybook/addon-a11y": "^7.6.3",
+		"@storybook/addon-actions": "^7.6.3",
+		"@storybook/addon-controls": "^7.6.3",
+		"@storybook/addon-designs": "^7.0.7",
+		"@storybook/addon-essentials": "^7.6.3",
+		"@storybook/addon-interactions": "^7.6.3",
+		"@storybook/addon-links": "^7.6.3",
 		"@storybook/addon-styling": "^1.3.7",
-		"@storybook/addon-themes": "^7.5.3",
-		"@storybook/addon-viewport": "^7.5.3",
-		"@storybook/addons": "^7.5.3",
-		"@storybook/blocks": "^7.5.3",
-		"@storybook/manager-api": "^7.5.3",
-		"@storybook/theming": "^7.5.3",
-		"@storybook/vue3": "^7.5.3",
-		"@storybook/vue3-vite": "^7.5.3",
+		"@storybook/addon-themes": "^7.6.3",
+		"@storybook/addon-viewport": "^7.6.3",
+		"@storybook/addons": "^7.6.3",
+		"@storybook/blocks": "^7.6.3",
+		"@storybook/manager-api": "^7.6.3",
+		"@storybook/theming": "^7.6.3",
+		"@storybook/vue3": "^7.6.3",
+		"@storybook/vue3-vite": "^7.6.3",
 		"@tsconfig/node18": "^18.2.2",
 		"@types/jsdom": "^21.1.6",
-		"@types/node": "^20.10.0",
+		"@types/node": "^20.10.3",
 		"@vitejs/plugin-vue": "^4.4.0",
 		"@vue/eslint-config-prettier": "^8.0.0",
 		"@vue/eslint-config-typescript": "^12.0.0",
 		"@vue/test-utils": "^2.4.1",
 		"@vue/tsconfig": "^0.4.0",
 		"autoprefixer": "^10.4.16",
-		"eslint": "8.54.0",
+		"eslint": "^8.55.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.1",
 		"eslint-plugin-storybook": "^0.6.15",
@@ -107,10 +107,10 @@
 		"react-dom": "^18.2.0",
 		"remark-gfm": "^4.0.0",
 		"sass": "^1.69.5",
-		"storybook": "^7.5.3",
-		"storybook-dark-mode": "^3.0.1",
+		"storybook": "^7.6.3",
+		"storybook-dark-mode": "^3.0.3",
 		"typescript": "~5.2.0",
-		"vite": "^4.5.0",
+		"vite": "^5.0.5",
 		"vite-plugin-dts": "^3.6.3",
 		"vitest": "^0.34.6",
 		"vue-tsc": "^1.8.19"
