--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,8 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: build-publish
-        uses: bitovi/github-actions-storybook-to-github-pages@v1.2.0
+        uses: bitovi/github-actions-storybook-to-github-pages@v1.0.0
         with:
-          path: build
-          install_command: npm install
+          path: docs
           build_command: npm run build-storybook
