--- a/package.json
+++ b/package.json
@@ -67,55 +67,55 @@
 	},
 	"dependencies": {
 		"vite-svg-loader": "^5.1.0",
-		"vue": "^3.3.10"
+		"vue": "^3.4.15"
 	},
 	"devDependencies": {
-		"@rushstack/eslint-patch": "^1.6.0",
-		"@storybook/addon-a11y": "^7.6.5",
-		"@storybook/addon-actions": "^7.6.5",
-		"@storybook/addon-controls": "^7.6.5",
-		"@storybook/addon-designs": "^7.0.7",
-		"@storybook/addon-essentials": "^7.6.5",
-		"@storybook/addon-interactions": "^7.6.5",
-		"@storybook/addon-links": "^7.6.5",
+		"@rushstack/eslint-patch": "^1.7.1",
+		"@storybook/addon-a11y": "^7.6.10",
+		"@storybook/addon-actions": "^7.6.10",
+		"@storybook/addon-controls": "^7.6.10",
+		"@storybook/addon-designs": "^7.0.9",
+		"@storybook/addon-essentials": "^7.6.10",
+		"@storybook/addon-interactions": "^7.6.10",
+		"@storybook/addon-links": "^7.6.10",
 		"@storybook/addon-styling": "^1.3.7",
-		"@storybook/addon-themes": "^7.6.5",
-		"@storybook/addon-viewport": "^7.6.5",
-		"@storybook/addons": "^7.6.5",
-		"@storybook/blocks": "^7.6.5",
-		"@storybook/manager-api": "^7.6.5",
-		"@storybook/theming": "^7.6.5",
-		"@storybook/vue3": "^7.6.5",
-		"@storybook/vue3-vite": "^7.6.5",
+		"@storybook/addon-themes": "^7.6.10",
+		"@storybook/addon-viewport": "^7.6.10",
+		"@storybook/addons": "^7.6.10",
+		"@storybook/blocks": "^7.6.10",
+		"@storybook/manager-api": "^7.6.10",
+		"@storybook/theming": "^7.6.10",
+		"@storybook/vue3": "^7.6.10",
+		"@storybook/vue3-vite": "^7.6.10",
 		"@tsconfig/node18": "^18.2.2",
 		"@types/jsdom": "^21.1.6",
-		"@types/node": "^20.10.3",
-		"@vitejs/plugin-vue": "^4.4.0",
-		"@vue/eslint-config-prettier": "^8.0.0",
+		"@types/node": "^20.11.6",
+		"@vitejs/plugin-vue": "^5.0.3",
+		"@vue/eslint-config-prettier": "^9.0.0",
 		"@vue/eslint-config-typescript": "^12.0.0",
 		"@vue/test-utils": "^2.4.1",
 		"@vue/tsconfig": "^0.5.1",
-		"autoprefixer": "^10.4.16",
+		"autoprefixer": "^10.4.17",
 		"eslint": "^8.55.0",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-prettier": "^5.0.1",
+		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-storybook": "^0.6.15",
-		"eslint-plugin-vue": "^9.17.0",
-		"gh-pages": "^6.0.0",
-		"jsdom": "^23.0.1",
+		"eslint-plugin-vue": "^9.20.1",
+		"gh-pages": "^6.1.1",
+		"jsdom": "^24.0.0",
 		"npm-run-all2": "^6.1.1",
-		"prettier": "^3.0.3",
+		"prettier": "^3.2.4",
 		"prettier-plugin-organize-imports": "^3.2.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"remark-gfm": "^4.0.0",
-		"sass": "^1.69.5",
-		"storybook": "^7.6.5",
+		"sass": "^1.70.0",
+		"storybook": "^7.6.10",
 		"storybook-dark-mode": "^3.0.3",
-		"typescript": "~5.3.3",
-		"vite": "^5.0.7",
-		"vite-plugin-dts": "^3.6.3",
-		"vitest": "^1.1.0",
-		"vue-tsc": "^1.8.19"
+		"typescript": "^5.3.3",
+		"vite": "^5.0.12",
+		"vite-plugin-dts": "^3.7.2",
+		"vitest": "^1.2.1",
+		"vue-tsc": "^1.8.27"
 	}
 }
