--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
 		"major": "npm version --no-git-tag-version major",
 		"release": "npm run build && npm publish --access public",
 		"storybook": "storybook dev -p 6006 --no-open",
-		"build-storybook": "storybook build -o docs",
-		"predeploy": "npm run build-storybook",
-		"deploy-storybook": "gh-pages -d docs"
+		"build-storybook": "storybook build -o docs"
 	},
 	"homepage": "http://mrksbnc.github.io/bamboo",
 	"repository": {
