--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,5 +21,5 @@ jobs:
         uses: bitovi/github-actions-storybook-to-github-pages@v1.0.2
         with:
           path: docs
-          install_command: npm ci
-          build_command: npm run build-storybook
+          install_command: pnpm install
+          build_command: pnpm run build-storybook
