--- a/package.json
+++ b/package.json
@@ -1,122 +1,88 @@
 {
-	"name": "@mrksbnc/bamboo",
-	"version": "0.0.1",
-	"description": "Vue 3 UI library built with Vite and Storybook",
-	"scripts": {
-		"dev": "vite",
-		"build": "npm run type-check && npm run lint && vite optimize --force && vite build --mode production && node scripts/postbuild.cjs",
-		"preview": "vite preview",
-		"test": "vitest --run --update",
-		"build-only": "vite build",
-		"type-check": "vue-tsc --noEmit",
-		"lint": "eslint . --ext .vue,.js,.cjs,.mjs,.ts --fix --ignore-path .gitignore",
-		"format": "prettier --write src/",
-		"patch": "npm version --no-git-tag-version patch",
-		"minor": "npm version --no-git-tag-version minor",
-		"major": "npm version --no-git-tag-version major",
-		"release": "npm run build && npm publish --access public",
-		"storybook": "storybook dev -p 6006 --no-open",
-		"build-storybook": "storybook build -o docs"
-	},
-	"homepage": "http://mrksbnc.github.io/bamboo",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/mrksbnc/bamboo.git"
-	},
-	"files": [
-		"dist/**/*"
-	],
-	"main": "./dist/index.umd.js",
-	"module": "./dist/index.es.js",
-	"types": "./dist/index.d.ts",
-	"exports": {
-		".": {
-			"import": "./dist/index.es.js",
-			"require": "./dist/index.umd.js"
-		},
-		"./index.css": {
-			"import": "./dist/main.css",
-			"require": "./dist/main.css"
-		},
-		"./colors.css": {
-			"import": "./dist/colors.css",
-			"require": "./dist/colors.css"
-		},
-		"./animation.css": {
-			"import": "./dist/animation.css",
-			"require": "./dist/animation.css"
-		},
-		"./inter.css": {
-			"import": "./dist/inter.css",
-			"require": "./dist/inter.css"
-		},
-		"./assistant.css": {
-			"import": "./dist/assistant.css",
-			"require": "./dist/assistant.css"
-		},
-		"./layout.css": {
-			"import": "./dist/layout.css",
-			"require": "./dist/layout.css"
-		},
-		"./theme.css": {
-			"import": "./dist/theme.css",
-			"require": "./dist/theme.css"
-		},
-		"./typography.css": {
-			"import": "./dist/typography.css",
-			"require": "./dist/typography.css"
-		}
-	},
-	"dependencies": {
-		"vue": "^3.4.15"
-	},
-	"devDependencies": {
-		"@rushstack/eslint-patch": "^1.7.1",
-		"@storybook/addon-a11y": "^7.6.10",
-		"@storybook/addon-actions": "^7.6.10",
-		"@storybook/addon-controls": "^7.6.10",
-		"@storybook/addon-designs": "^7.0.9",
-		"@storybook/addon-essentials": "^7.6.10",
-		"@storybook/addon-interactions": "^7.6.10",
-		"@storybook/addon-links": "^7.6.10",
-		"@storybook/addon-styling": "^1.3.7",
-		"@storybook/addon-themes": "^7.6.10",
-		"@storybook/addon-viewport": "^7.6.10",
-		"@storybook/addons": "^7.6.10",
-		"@storybook/blocks": "^7.6.10",
-		"@storybook/manager-api": "^7.6.10",
-		"@storybook/theming": "^7.6.10",
-		"@storybook/vue3": "^7.6.10",
-		"@storybook/vue3-vite": "^7.6.10",
-		"@tsconfig/node18": "^18.2.2",
-		"@types/jsdom": "^21.1.6",
-		"@types/node": "^20.11.6",
-		"@vitejs/plugin-vue": "^5.0.3",
-		"@vue/eslint-config-prettier": "^9.0.0",
-		"@vue/eslint-config-typescript": "^12.0.0",
-		"@vue/test-utils": "^2.4.1",
-		"@vue/tsconfig": "^0.5.1",
-		"autoprefixer": "^10.4.17",
-		"eslint": "^8.55.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-prettier": "^5.1.3",
-		"eslint-plugin-storybook": "^0.6.15",
-		"eslint-plugin-vue": "^9.20.1",
-		"gh-pages": "^6.1.1",
-		"jsdom": "^24.0.0",
-		"npm-run-all2": "^6.1.1",
-		"prettier": "^3.2.4",
-		"prettier-plugin-organize-imports": "^3.2.4",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"remark-gfm": "^4.0.0",
-		"sass": "^1.70.0",
-		"storybook": "^7.6.10",
-		"storybook-dark-mode": "^3.0.3",
-		"typescript": "^5.3.3",
-		"vite": "^5.0.12",
-		"vite-plugin-dts": "^3.7.2",
-		"vitest": "^1.2.1",
-		"vue-tsc": "^1.8.27"
-	}
+  "name": "@mrksbnc/bamboo",
+  "version": "0.0.1",
+  "description": "Vue 3 UI library built with Vite and Storybook",
+  "scripts": {
+    "dev": "vite",
+    "build": "pnpm run type-check && pnpm run lint && vite optimize --force && vite build --mode production && node scripts/postbuild.cjs",
+    "preview": "vite preview",
+    "test": "vitest --run --update",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit",
+    "lint": "eslint . --ext .vue,.js,.cjs,.mjs,.ts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/",
+    "patch": "pnpm version --no-git-tag-version patch",
+    "minor": "pnpm version --no-git-tag-version minor",
+    "major": "pnpm version --no-git-tag-version major",
+    "release": "pnpm run build && pnpm publish --access public",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "homepage": "http://mrksbnc.github.io/bamboo",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mrksbnc/bamboo.git"
+  },
+  "files": [
+    "dist/**/*"
+  ],
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js"
+    },
+    "./index.css": {
+      "import": "./dist/main.css",
+      "require": "./dist/main.css"
+    }
+  },
+  "dependencies": {
+    "vue": "^3.4.15"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^1.2.1",
+    "@rushstack/eslint-patch": "^1.7.1",
+    "@storybook/addon-essentials": "8.0.0-rc.1",
+    "@storybook/addon-interactions": "8.0.0-rc.1",
+    "@storybook/addon-links": "8.0.0-rc.1",
+    "@storybook/blocks": "8.0.0-rc.1",
+    "@storybook/test": "8.0.0-rc.1",
+    "@storybook/vue3": "8.0.0-rc.1",
+    "@storybook/vue3-vite": "8.0.0-rc.1",
+    "@tsconfig/node18": "^18.2.2",
+    "@types/jsdom": "^21.1.6",
+    "@types/node": "^20.11.6",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitest/coverage-v8": "^1.3.1",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.1",
+    "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-vue": "^9.20.1",
+    "gh-pages": "^6.1.1",
+    "jsdom": "^24.0.0",
+    "pnpm-run-all2": "^6.1.1",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.4",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "remark-gfm": "^4.0.0",
+    "sass": "^1.70.0",
+    "storybook": "8.0.0-rc.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vite-plugin-dts": "^3.7.2",
+    "vitest": "^1.2.1",
+    "vue-tsc": "^2.0.3"
+  }
 }
