--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -5,4 +5,4 @@ printWidth: 80
 singleQuote: true
 trailingComma: all
 singleAttributePerLine: true
-plugins: [prettier-plugin-organize-imports]
+plugins: [prettier-plugin-organize-imports, prettier-plugin-tailwindcss]
