--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -3,6 +3,6 @@ tabWidth: 2
 useTabs: true
 printWidth: 80
 singleQuote: true
-trailingComma: all
+trailingComma: es5
 singleAttributePerLine: true
 plugins: [prettier-plugin-organize-imports, prettier-plugin-tailwindcss]
