--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"test": "vitest --run --update",
 		"build-only": "vite build",
 		"type-check": "vue-tsc --noEmit",
-		"lint": "eslint . --ext .vue,.js,.cjs,.mjs,.ts --fix --ignore-path .gitignore",
+		"lint": "eslint -c eslint.config.js",
 		"format": "prettier --write src/",
 		"patch": "npm version --no-git-tag-version patch",
 		"minor": "npm version --no-git-tag-version minor",
@@ -58,7 +58,6 @@
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^1.5.0",
-		"@rushstack/eslint-patch": "^1.10.3",
 		"@storybook/addon-coverage": "^1.0.4",
 		"@storybook/addon-docs": "^8.1.6",
 		"@storybook/addon-essentials": "^8.1.6",
@@ -73,27 +72,18 @@
 		"@tsconfig/node18": "^18.2.2",
 		"@types/jsdom": "^21.1.7",
 		"@types/node": "^20.14.2",
-		"@typescript-eslint/eslint-plugin": "^7.12.0",
 		"@vitejs/plugin-vue": "^5.0.5",
 		"@vitest/coverage-v8": "^1.6.0",
-		"@vue/eslint-config-prettier": "^9.0.0",
-		"@vue/eslint-config-typescript": "^13.0.0",
 		"@vue/test-utils": "^2.4.6",
 		"@vue/tsconfig": "^0.5.1",
 		"autoprefixer": "^10.4.19",
 		"chromatic": "^11.0.0",
-		"eslint": "^8.56.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-prettier": "^5.1.3",
-		"eslint-plugin-storybook": "^0.8.0",
-		"eslint-plugin-vue": "^9.26.0",
 		"gh-pages": "^6.1.1",
+		"globals": "^15.4.0",
 		"jsdom": "^24.1.0",
 		"postcss": "^8.4.35",
 		"postcss-nesting": "^12.1.5",
 		"prettier": "^3.3.1",
-		"prettier-plugin-organize-imports": "^3.2.4",
-		"prettier-plugin-tailwindcss": "^0.6.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"remark-gfm": "^4.0.0",
