--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@mrksbnc/bamboo",
-	"version": "0.0.1-test.1",
+	"version": "0.0.1-rc.1",
+	"type": "module",
 	"description": "Vue 3 UI library built with Vite and Storybook",
 	"scripts": {
 		"dev": "vite",
@@ -56,20 +57,19 @@
 		"vue": "^3.4.21"
 	},
 	"devDependencies": {
-		"@chromatic-com/storybook": "^1.2.2",
+		"@chromatic-com/storybook": "^1.5.0",
 		"@rushstack/eslint-patch": "^1.7.1",
-		"@storybook/addon-coverage": "^1.0.1",
-		"@storybook/addon-docs": "^8.0.0-rc.3",
-		"@storybook/addon-essentials": "8.0.0-rc.3",
-		"@storybook/addon-interactions": "8.0.0-rc.3",
-		"@storybook/addon-links": "8.0.0-rc.3",
-		"@storybook/addon-mdx-gfm": "^8.0.0-rc.3",
-		"@storybook/addon-themes": "^8.0.0-rc.3",
-		"@storybook/blocks": "8.0.0-rc.3",
-		"@storybook/test": "8.0.0-rc.3",
-		"@storybook/theming": "^8.0.0-rc.3",
-		"@storybook/vue3": "8.0.0-rc.3",
-		"@storybook/vue3-vite": "8.0.0-rc.3",
+		"@storybook/addon-coverage": "^1.0.4",
+		"@storybook/addon-docs": "^8.1.9",
+		"@storybook/addon-essentials": "^8.1.9",
+		"@storybook/addon-interactions": "^8.1.9",
+		"@storybook/addon-links": "^8.1.9",
+		"@storybook/addon-themes": "^8.1.9",
+		"@storybook/blocks": "^8.1.9",
+		"@storybook/test": "^8.1.9",
+		"@storybook/theming": "^8.1.9",
+		"@storybook/vue3": "^8.1.9",
+		"@storybook/vue3-vite": "^8.1.9",
 		"@tsconfig/node18": "^18.2.2",
 		"@types/jsdom": "^21.1.6",
 		"@types/node": "^20.11.6",
@@ -89,7 +89,7 @@
 		"gh-pages": "^6.1.1",
 		"jsdom": "^24.0.0",
 		"postcss": "^8.4.35",
-		"postcss-nesting": "^12.0.4",
+		"postcss-nesting": "^12.1.5",
 		"prettier": "^3.2.5",
 		"prettier-plugin-organize-imports": "^3.2.4",
 		"prettier-plugin-tailwindcss": "^0.5.12",
@@ -97,7 +97,7 @@
 		"react-dom": "^18.2.0",
 		"remark-gfm": "^4.0.0",
 		"sass": "^1.70.0",
-		"storybook": "8.0.0-rc.3",
+		"storybook": "^8.1.9",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3",
 		"vite": "^5.1.5",
