chore: lint updates

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"test": "vitest --run --update",
 		"build-only": "vite build",
 		"type-check": "vue-tsc --noEmit",
-		"lint": "eslint . --ext .vue,.js,.cjs,.mjs,.ts --fix --ignore-path .gitignore",
+		"lint": "eslint .",
 		"format": "prettier --write src/",
 		"patch": "npm version --no-git-tag-version patch",
 		"minor": "npm version --no-git-tag-version minor",
@@ -58,7 +58,7 @@
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^1.5.0",
-		"@rushstack/eslint-patch": "^1.7.1",
+		"@eslint/js": "^9.5.0",
 		"@storybook/addon-coverage": "^1.0.4",
 		"@storybook/addon-docs": "^8.1.9",
 		"@storybook/addon-essentials": "^8.1.9",
@@ -73,26 +73,24 @@
 		"@tsconfig/node18": "^18.2.2",
 		"@types/jsdom": "^21.1.6",
 		"@types/node": "^20.11.6",
+		"@typescript-eslint/parser": "^7.13.0",
 		"@vitejs/plugin-vue": "^5.0.3",
 		"@vitest/coverage-v8": "^1.3.1",
-		"@vue/eslint-config-prettier": "^9.0.0",
-		"@vue/eslint-config-typescript": "^12.0.0",
 		"@vue/test-utils": "^2.4.1",
 		"@vue/tsconfig": "^0.5.1",
 		"autoprefixer": "^10.4.18",
 		"chromatic": "^11.0.0",
-		"eslint": "^8.55.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-prettier": "^5.1.3",
-		"eslint-plugin-storybook": "^0.8.0",
-		"eslint-plugin-vue": "^9.20.1",
+		"eslint": "9.x",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-vue": "^9.26.0",
 		"gh-pages": "^6.1.1",
+		"globals": "^15.4.0",
 		"jsdom": "^24.0.0",
 		"postcss": "^8.4.35",
 		"postcss-nesting": "^12.1.5",
 		"prettier": "^3.2.5",
 		"prettier-plugin-organize-imports": "^3.2.4",
-		"prettier-plugin-tailwindcss": "^0.5.12",
+		"prettier-plugin-tailwindcss": "^0.5.14",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"remark-gfm": "^4.0.0",
@@ -100,6 +98,7 @@
 		"storybook": "^8.1.9",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3",
+		"typescript-eslint": "^7.13.0",
 		"vite": "^5.1.5",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-dts": "^3.7.2",
