fix: test updates and story fixes

--- a/chromatic.config.json
+++ b/chromatic.config.json
@@ -1,5 +1,8 @@
 {
+	"$schema": "https://www.chromatic.com/config-file.schema.json",
 	"zip": true,
 	"onlyChanged": true,
-	"projectId": "Project:64d94a837fda91d800320b66"
+	"projectId": "Project:64d94a837fda91d800320b66",
+	"autoAcceptChanges": "main",
+	"exitOnceUploaded": true
 }
