chore: tsconfig update with vitest/globals type

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,7 +23,7 @@
 		"noUncheckedSideEffectImports": true,
 
 		/* Types */
-		"types": ["vite/client"],
+		"types": ["vite/client", "vitest/globals"],
 
 		/* Project */
 		"baseUrl": ".",
