refactor: move to pnpm and code style changes

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,7 +23,7 @@
 		"noUncheckedSideEffectImports": true,
 
 		/* Types */
-		"types": ["vite/client", "vitest/globals"],
+		"types": ["vite/client", "vitest/globals", "vite-svg-loader"],
 
 		/* Project */
 		"baseUrl": ".",
