--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
 		"dist/**/*"
 	],
 	"scripts": {
-		"build": "npm run type-check && npm run lint && vite optimize --force && vite build --mode production && npm run build:tailwind",
+		"build": "pnpm run type-check && pnpm run lint && vite optimize --force && vite build --mode production && pnpm run build:tailwind",
 		"build:tailwind": "npx tailwindcss -o dist/index.css --minify",
 		"build-storybook": "storybook build -o static",
 		"chromatic": "npx chromatic --exit-zero-on-changes",
 		"format": "prettier --write .",
 		"lint": "eslint ./src/**/*.{ts,vue} --fix",
-		"release": "npm run build && npm publish --access public",
+		"release": "pnpm run build && pnpm publish --access public",
 		"storybook": "storybook dev -p 6006 --no-open",
 		"test": "vitest --update --coverage --silent=false",
 		"type-check": "vue-tsc --noEmit"
@@ -98,8 +98,7 @@
 		"vue-tsc": "^2.2.0"
 	},
 	"engines": {
-		"node": ">=22.11.0",
-		"npm": ">=10.9.0"
+		"node": ">=22.11.0"
 	},
 	"publishConfig": {
 		"access": "public",
