--- a/.editorconfig
+++ b/.editorconfig
@@ -1,21 +1,6 @@
-# EditorConfig is awesome: https://EditorConfig.org
-
-# top-most EditorConfig file
-root = true
-
-[*]
-indent_size = 2
+[*.{js,jsx,mjs,cjs,ts,tsx,mts,cts,vue}]
 charset = utf-8
-end_of_line = lf
-indent_style = tab
-insert_final_newline = false
-trim_trailing_whitespace = false
-
-[*.md]
-indent_style = tab
-trim_trailing_whitespace = true
-
-[*.yaml]
 indent_size = 2
 indent_style = tab
-
+insert_final_newline = true
+trim_trailing_whitespace = true
