--- a/.gitignore
+++ b/.gitignore
@@ -2,24 +2,31 @@
 logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-# Node & OS
 node_modules
 .DS_Store
 dist
+dist-ssr
 coverage
 *.local
+
+/cypress/videos/
+/cypress/screenshots/
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-!.vscode/settings.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Environment variables
-.env
-!.env.example
+*.tsbuildinfo
 
-# Storybook
-!static
 *storybook.log
