--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,13 @@
 {
-	"tailwindCSS.experimental.classRegex": [
-		"/\\*\\s*tw\\s*\\*/\\s*'([^']*)'",
-		"/\\*\\s*tw\\s*\\*/\\s*\"([^\"]*)\""
-	]
+  // "explorer.fileNesting.enabled": true,
+  // "explorer.fileNesting.patterns": {
+  //   "tsconfig.json": "tsconfig.*.json, env.d.ts",
+  //   "vite.config.*": "jsconfig*, vitest.config.*, cypress.config.*, playwright.config.*",
+  //   "package.json": "package-lock.json, pnpm*, .yarnrc*, yarn*, .eslint*, eslint*, .prettier*, prettier*, .editorconfig"
+  // },
+  "editor.codeActionsOnSave": {
+    "source.fixAll": "explicit"
+  },
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
