refactor: story refactor

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,16 +20,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install pnpm
-        run: |
-          npm install -g pnpm
+      - name: Setup Node.js 22
+        uses: actions/setup-node@v3
+        with:
+          node-version: 22
 
       - name: Install dependencies
         run: |
-          pnpm install
+          npm install
 
       - id: build-publish
         uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
         with:
           path: static
-          build_command: pnpm run build:storybook
+          build_command: npm run build:storybook
