--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,12 +20,8 @@ jobs:
         with:
           node-version: 22
 
-      - name: Install pnpm
-        run: |
-          npm install -g pnpm
-
       - name: Install Dependencies
-        run: pnpm install
+        run: npm install
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
