--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,14 +11,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install pnpm
-        run: |
-          npm install -g pnpm
+      - name: Setup Node.js 22
+        uses: actions/setup-node@v3
+        with:
+          node-version: 22
 
       - name: Install dependencies
         run: |
-          pnpm install
+          npm install
 
       - name: Run tests
         run: |
-          pnpm test
+          npm run test
