--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,20 +4,20 @@ repos:
       - id: lint
         name: Lint
         language: system
-        entry: pnpm run lint:oxlint
+        entry: npm run lint:oxlint
         stages: [pre-commit]
         pass_filenames: false
 
       - id: type-check
         name: Type Check
         language: system
-        entry: pnpm run type-check
+        entry: npm run type-check
         stages: [pre-commit]
         pass_filenames: false
 
       - id: test
         name: Test
         language: system
-        entry: pnpm run type-check
+        entry: npm run type-check
         stages: [pre-commit]
         pass_filenames: false
