--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint": "run-s lint:*",
     "format": "prettier --write src/",
     "storybook": "storybook dev -p 6006",
-    "build": "NODE_ENV=production run-p type-check \"build-only {@}\" && pnpm build:css:min",
+    "build": "NODE_ENV=production run-p type-check \"build-only {@}\" && npm build:css:min",
     "build:storybook": "storybook build -o static",
     "build:css:min": "NPM_ENV=production npx postcss src/lib.css  > dist/lib.min.css",
     "build:css": "NPM_ENV=development npx postcss src/lib.css  > dist/lib.css"
