refactor: cleanup & chores

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
 	"semi": true,
+	"tabWidth": 2,
+	"useTabs": true,
+	"printWidth": 100,
 	"singleQuote": true,
 	"trailingComma": "all",
-	"printWidth": 100,
-	"tabWidth": 2,
-	"useTabs": true
+	"singleAttributePerLine": true
 }
