input component update

--- a/.gitignore
+++ b/.gitignore
@@ -14,18 +14,12 @@ dist-ssr
 coverage
 *.local
 
-/cypress/videos/
-/cypress/screenshots/
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
 
 *.tsbuildinfo
 
@@ -35,3 +29,5 @@ dist
 coverage
 static
 test
+
+cache
