--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,10 @@
 {
-	"$schema": "https://json.schemastore.org/prettierrc",
-	"semi": false,
-	"printWidth": 100,
-	"singleQuote": true,
-	"singleAttributePerLine": true,
-	"plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
+  "$schema": "https://json.schemastore.org/prettierrc",
+  "semi": true,
+  "tabWidth": 2,
+  "useTabs": true,
+  "printWidth": 100,
+  "singleQuote": true,
+  "singleAttributePerLine": true,
+  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
 }
